# Customer-Segmentation

./: README.md  analysis.ipynb  clustering.py  preprocessing.py  profiling.py  pyproject.toml  requirements.txt  test_customerseg.py  validation.py
