[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "customerseg"
version = "0.1.0"
description = "Customer segmentation with honest validation: cluster-vs-label agreement and a supervised ceiling."
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "scikit-learn"]

[tool.setuptools.packages.find]
where = ["src"]
